test/compiler/fail/_if_mismatch.ods
do if true then 42 else "hello"
